fix alignemnt of sync button

--- a/app/styles/app/modules/sync-button.sass
+++ b/app/styles/app/modules/sync-button.sass
@@ -38,7 +38,7 @@
     margin-right: 0.3rem
 
   .loading-indicator--white
-    vertical-align: top
+    vertical-align: middle
     margin-right: .5em
 
 .sync-last
